Archive2/5d/c10eb132ac684f/output
main.cpp: In lambda function:
main.cpp:8:20: error: ‘x’ is not captured
             return x;
                    ^
