Archive2/5d/c10eb132ac684f/main.cpp
int main()
{
    int x = 42;
    auto f = []()
    {
        return [=]()
        {
            return x;
        };
    };
}